--- a/.github/workflows/build_ErfanGSIs.yml
+++ b/.github/workflows/build_ErfanGSIs.yml
@@ -5,7 +5,7 @@ on:
     types: [started]
     
 env:
-  ROM_URL: https://versaweb.dl.sourceforge.net/project/miroom/20.7.9/MiMIX2S_MIUI_20.7.9_MiRoom_10.0.zip  erfanGSTs
+  ROM_URL: https://versaweb.dl.sourceforge.net/project/miroom/20.7.9/MiMIX2S_MIUI_20.7.9_MiRoom_10.0.zip  ErfanGSIs
   ROM_NAME: MIUI
   TZ: Asia/Kolkata
   MIR: wet
